fix spacing between progress bar and funding goal

--- a/crossroads.net/styles/pages/my-trip.scss
+++ b/crossroads.net/styles/pages/my-trip.scss
@@ -7,6 +7,9 @@
     .trip-funding {
         padding-top: 5px;
     }
+    .funding-goal {
+        margin-top: -20px;
+    }
     h5 {
         padding-left: 5px;
     }
